tests/errors/tabular_col_length.experr
all columns must have the same length
